# BCG-CAMP-MONARCH

./: .gitignore  CMakeLists.txt  File.cu  LICENSE  MultiGPUOpenMPCAMP.sln  MultiGPUOpenMPCAMP.vcxproj  README.md  TestMonarch.py  compile.power9.sh  compile.sh  cuda_structs.h  libsolv.cu  libsolv.h  libsolvFullDevice.cu  libsolv_threadcells.cu  main.cu  make.power9.sh  make.run.sh  old_pyproject.toml  run.sh  test.cu
OpenAcc/: CMakeLists.txt  compile.power9.sh  test.cpp
OpenMP_target_spread/: CMakeLists.txt  compile.power9.sh  make.power9.sh  test.cpp
OpenMP_target_spread/data/: confBCG.txt  outBCG.txt
data/: CMakeLists.txt  conf.txt  confBCG.txt  outBCG.txt  outBCG10Cells.txt
old/: TestMonarch.py  setup.py
old_power9/: TestMonarch.py
